# Copyright 2024 The Abseil Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://bazel.build/external/overview#bzlmod

module(
    name = "abseil-cpp",
    version = "head",
    compatibility_level = 1,
)

RULES_NIXKPGS_REVISION = "ecd3028f3a586a5bdd3eeb73d3d621dc822a10a7"
RULES_NIXKPGS_INTEGRITY = "sha256-fSksumNFG+GXZrnUgIhs4n70Sp1sKwCG69JISN8G25E="

bazel_dep(name = "rules_nixpkgs_core")
archive_override(
    module_name = "rules_nixpkgs_core",
    urls = ["https://github.com/tweag/rules_nixpkgs/archive/{}.tar.gz".format(RULES_NIXKPGS_REVISION)],
    integrity = RULES_NIXKPGS_INTEGRITY,
    strip_prefix = "rules_nixpkgs-{}/core".format(RULES_NIXKPGS_REVISION),
)

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.file(
    name = "nixpkgs",
    file = "//:nixpkgs.nix",
    file_deps = ["//:flake.lock"],
)
use_repo(nix_repo, "nixpkgs")

nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg")
nix_pkg.attr(attr = "bazel_7")
use_repo(nix_pkg, "bazel_7")

bazel_dep(name = "rules_nixpkgs_cc")
archive_override(
    module_name = "rules_nixpkgs_cc",
    urls = ["https://github.com/tweag/rules_nixpkgs/archive/{}.tar.gz".format(RULES_NIXKPGS_REVISION)],
    integrity = RULES_NIXKPGS_INTEGRITY,
    strip_prefix = "rules_nixpkgs-{}/toolchains/cc".format(RULES_NIXKPGS_REVISION),
)

bazel_dep(name = "rules_cc", version = "0.0.4")

bazel_dep(name = "rules_nixpkgs_java")
archive_override(
    module_name = "rules_nixpkgs_java",
    urls = ["https://github.com/tweag/rules_nixpkgs/archive/{}.tar.gz".format(RULES_NIXKPGS_REVISION)],
    integrity = RULES_NIXKPGS_INTEGRITY,
    strip_prefix = "rules_nixpkgs-{}/toolchains/java".format(RULES_NIXKPGS_REVISION),
)

bazel_dep(name = "rules_java", version = "7.4.0")

cc_configure = use_extension("@bazel_tools//tools/cpp:cc_configure.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

# Only direct dependencies need to be listed below.
# Please keep the versions in sync with the versions in the WORKSPACE file.

bazel_dep(name = "bazel_skylib",
          version = "1.5.0")

bazel_dep(name = "google_benchmark",
          version = "1.8.3",
          repo_name = "com_github_google_benchmark",
          dev_dependency = True)

bazel_dep(name = "googletest",
          version = "1.14.0.bcr.1",
          repo_name = "com_google_googletest")

bazel_dep(name = "platforms",
          version = "0.0.8")
